--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -3,8 +3,6 @@
 
 	"Access Denied": "Access Denied",
 
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
-
 	"Delete": "Delete",
 
 	"Settings": "Settings",
@@ -105,7 +103,8 @@
 	"Enter comment here.": "Enter comment here.",
 	"Comment": "Comment",
 
-	"en-US": "en-US",
+	"Sorry about that.": "Sorry about that.",
+
 	"Guide": "Guide",
 	"Version": "Version",
 	"By the squareBracket contributors": "By the squareBracket contributors",
@@ -187,6 +186,7 @@
 	"Your comment has been submitted.": "Your comment has been submitted.",
 
 	"This is not your upload.": "This is not your upload.",
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
 	"Please enter your username! ": "Please enter your username! ",
 	"Please enter your password! ": "Please enter your password! ",
@@ -206,5 +206,6 @@
 	" The new passwords aren't identical.": " The new passwords aren't identical.",
 	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed."
+
 }
