--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -78,6 +78,13 @@
 	"Posts": "Posts",
 	"Views": "Views",
 
+	"Upload": "Upload",
+	"Upload info": "Upload info",
+	"Enter the title and description of your upload.": "Enter the title and description of your upload.",
+	" Tags": " Tags",
+	"File": "File",
+	"Select the file you want to upload. Major video and image file formats are supported.": "Select the file you want to upload. Major video and image file formats are supported.",
+
 	"Edit my settings": "Edit my settings",
 	"View user page as viewer": "View user page as viewer",
 	"Admin panel": "Admin panel",
@@ -123,7 +130,6 @@
 
 	"Studio": "Studio",
 	"Log out": "Log out",
-	"Upload": "Upload",
 	"Logout": "Logout",
 	"Sign In": "Sign In",
 	"Home": "Home",
@@ -153,16 +159,7 @@
 	"No uploaded videos.": "No uploaded videos.",
 	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
 
-	"Upload video": "Upload video",
-	"Video info": "Video info",
-	"Enter the title and description of your video.": "Enter the title and description of your video.",
-	" Tags": " Tags",
-	"Video file": "Video file",
-	"Select the video file you want to upload.": "Select the video file you want to upload.",
-	"Upload guidelines": "Upload guidelines",
-	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
-
-	"videos": "videos",
+	"uploads": "uploads",
 	"About": "About",
 	"Category:": "Category:",
 	"Rating ratio:": "Rating ratio:",
@@ -170,7 +167,8 @@
 	"Favorites:": "Favorites:",
 	"Comments": "Comments",
 	"Comment on this video:": "Comment on this video:",
-	"About this video": "About this video",
+	"About this upload": "About this upload",
+	"More uploads": "More uploads",
 
 	"Show replies": "Show replies",
 	"Reply": "Reply",
@@ -206,5 +204,5 @@
 	" The new passwords aren't identical.": " The new passwords aren't identical.",
 	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded, it is (probably) being processed.",
 }
