--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -3,8 +3,6 @@
 
 	"Access Denied": "Access Denied",
 
-	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
-
 	"Delete": "Delete",
 
 	"Settings": "Settings",
@@ -47,7 +45,6 @@
 	"Dark": "Dark",
 	"Nostalgia": "Nostalgia",
 	"Language": "Language",
-	"Enable sounds": "Enable sounds",
 	"Profile picture roundness": "Profile picture roundness",
 	"Square": "Square",
 	"Rounded": "Rounded",
@@ -69,6 +66,8 @@
 	"Profile": "Profile",
 	"Profile options are not available to banned users.": "Profile options are not available to banned users.",
 	"Miscellaneous": "Miscellaneous",
+	"Sounds": "Sounds",
+	"Enable sounds": "Enable sounds",
 
 	"Statistics": "Statistics",
 	"About this instance of squareBracket": "About this instance of squareBracket",
@@ -76,13 +75,6 @@
 	"Registered users": "Registered users",
 	"Posts": "Posts",
 	"Views": "Views",
-
-	"Upload": "Upload",
-	"Upload info": "Upload info",
-	"Enter the title and description of your upload.": "Enter the title and description of your upload.",
-	" Tags": " Tags",
-	"File": "File",
-	"Select the file you want to upload. Major video and image file formats are supported.": "Select the file you want to upload. Major video and image file formats are supported.",
 
 	"Edit my settings": "Edit my settings",
 	"View user page as viewer": "View user page as viewer",
@@ -95,6 +87,9 @@
 	"Follow": "Follow",
 	"Marked all notifications as read.": "Marked all notifications as read.",
 	"Settings successfully saved!": "Settings successfully saved!",
+	"Notifications": "Notifications",
+	"No new notifications!": "No new notifications!",
+	"Mark all as read": "Mark all as read",
 	"About this user": "About this user",
 	"View threads": "View threads",
 	"Show posts": "Show posts",
@@ -108,7 +103,8 @@
 	"Enter comment here.": "Enter comment here.",
 	"Comment": "Comment",
 
-	"en-US": "en-US",
+	"Sorry about that.": "Sorry about that.",
+
 	"Guide": "Guide",
 	"Version": "Version",
 	"By the squareBracket contributors": "By the squareBracket contributors",
@@ -125,10 +121,9 @@
 
 	"More videos": "More videos",
 
-	"Edit": "Edit",
-
 	"Studio": "Studio",
 	"Log out": "Log out",
+	"Upload": "Upload",
 	"Logout": "Logout",
 	"Sign In": "Sign In",
 	"Home": "Home",
@@ -154,26 +149,33 @@
 	"Again.": "Again.",
 	"Get started": "Get started",
 	"Already have an account?": "Already have an account?",
-	"Randomly selected uploads": "Randomly selected uploads",
-	"No uploads.": "No uploads.",
+	"Recommended randomly": "Recommended randomly",
+	"No uploaded videos.": "No uploaded videos.",
+	"Recently uploaded to squareBracket": "Recently uploaded to squareBracket",
 
-	"uploads": "uploads",
+	"Upload video": "Upload video",
+	"Video info": "Video info",
+	"Enter the title and description of your video.": "Enter the title and description of your video.",
+	" Tags": " Tags",
+	"Video file": "Video file",
+	"Select the video file you want to upload.": "Select the video file you want to upload.",
+	"Upload guidelines": "Upload guidelines",
+	"Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.": "Do not upload any TV shows, cartoons, music videos, music concerts, or commercials without permission unless they consist entirely of content that you've created yourself.",
+
+	"videos": "videos",
+	"Edit": "Edit",
 	"About": "About",
 	"Category:": "Category:",
 	"Rating ratio:": "Rating ratio:",
 	"Last viewed:": "Last viewed:",
 	"Favorites:": "Favorites:",
 	"Comments": "Comments",
-	"Comment on this video:": "Comment on this video:",
-	"About this upload": "About this upload",
-	"More uploads": "More uploads",
 
 	"Show replies": "Show replies",
 	"Reply": "Reply",
 
 	"Latest Videos": "Latest Videos",
 	"squareBracket Videos": "squareBracket Videos",
-	"No uploaded videos.": "No uploaded videos.",
 
 	"Favorite": "Favorite",
 
@@ -184,6 +186,7 @@
 	"Your comment has been submitted.": "Your comment has been submitted.",
 
 	"This is not your upload.": "This is not your upload.",
+	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
 	"Please enter your username! ": "Please enter your username! ",
 	"Please enter your password! ": "Please enter your password! ",
@@ -203,5 +206,6 @@
 	" The new passwords aren't identical.": " The new passwords aren't identical.",
 	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Please wait 2 minutes before uploading again. If you've already uploaded, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded, it is (probably) being processed.",
+	"Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded a video, it is (probably) being processed."
+
 }
