--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -202,5 +202,5 @@
 	" The new passwords aren't identical.": " The new passwords aren't identical.",
 	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Please wait 2 minutes before uploading again. If you've already uploaded, it is (probably) being processed.": "Please wait 2 minutes before uploading again. If you've already uploaded, it is (probably) being processed.",
+	"Please wait 2 minutes before uploading again.": "Please wait 2 minutes before uploading again.",
 }
