--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -27,7 +27,15 @@
 	"Sorry %s, you are banned from squareBracket.": "Sorry %s, you are banned from squareBracket.",
 	"This ban is not set to expire.": "This ban is not set to expire.",
 
-	"Edit video": "Edit video",
+	"Admin panel": "Admin panel",
+	"Currently running squareBracket version %s (commit %s) on %s.": "Currently running squareBracket version %s (commit %s) on %s.",
+	"Latest registered users": "Latest registered users",
+	"Latest seen users": "Latest seen users",
+	"Latest uploads": "Latest uploads",
+	"Numbers": "Numbers",
+	"All comments": "All comments",
+
+	"Edit upload": "Edit upload",
 	"Post info": "Post info",
 	"Enter the updated title and description of your upload.": "Enter the updated title and description of your upload.",
 	" Title": " Title",
@@ -50,7 +58,7 @@
 	"Enable sounds": "Enable sounds",
 	"Profile picture roundness": "Profile picture roundness",
 	"Square": "Square",
-	"Rounded": "Rounded",
+	"In-between": "In-between",
 	"Circle": "Circle",
 
 	"Register": "Register",
@@ -85,7 +93,6 @@
 
 	"Edit my settings": "Edit my settings",
 	"View user page as viewer": "View user page as viewer",
-	"Admin panel": "Admin panel",
 	"%s follower%s": "%s follower%s",
 	"no": "no",
 	"%s view%s": "%s view%s",
@@ -95,11 +102,6 @@
 	"Marked all notifications as read.": "Marked all notifications as read.",
 	"Settings successfully saved!": "Settings successfully saved!",
 	"About this user": "About this user",
-	"View threads": "View threads",
-	"Show posts": "Show posts",
-	"Send private message": "Send private message",
-	"Generate password reset for user": "Generate password reset for user",
-	"Edit forum permissions": "Edit forum permissions",
 	"There are currently no videos uploaded by %s.": "There are currently no videos uploaded by %s.",
 	"General information": "General information",
 	"Registered on": "Registered on",
@@ -109,6 +111,9 @@
 
 	"en-US": "en-US",
 	"Guide": "Guide",
+	"Following": "Following",
+	"You do not follow any users!": "You do not follow any users!",
+	"Last connected": "Last connected",
 	"Version": "Version",
 	"By the squareBracket contributors": "By the squareBracket contributors",
 	"What's new": "What's new",
