add profile background setting

--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -74,6 +74,7 @@
 	"Log out from all devices": "Log out from all devices",
 	"Credentials": "Credentials",
 	"Profile": "Profile",
+	"Profile background": "Profile background",
 	"Profile options are not available to banned users.": "Profile options are not available to banned users.",
 	"Miscellaneous": "Miscellaneous",
 
