--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -60,6 +60,8 @@
 
 	"Settings": "Settings",
 	"Credentials": "Credentials",
+	"Setting name": "Setting name",
+	"Setting": "Setting",
 	"Email address": "Email address",
 	"Current Password (For verification)": "Current Password (For verification)",
 	"Repeat new Password": "Repeat new Password",
