--- a/private/lang/template.json
+++ b/private/lang/template.json
@@ -9,29 +9,19 @@
 
 	"The video you were looking for cannot be found.": "The video you were looking for cannot be found.",
 
-	"Admin panel": "Admin panel",
-	"Currently running Qobo version %s (commit %s) on %s.": "Currently running Qobo version %s (commit %s) on %s.",
-	"The latest": "The latest",
-	"Latest registered users": "Latest registered users",
-	"Latest seen users": "Latest seen users",
-	"Latest uploads": "Latest uploads",
-	"Numbers": "Numbers",
-	"All comments": "All comments",
-	"Delete": "Delete",
-
-	"Edit upload": "Edit upload",
-	"Enter the updated title and description of your upload.": "Enter the updated title and description of your upload.",
-	" Title": " Title",
-	" Description": " Description",
-	"Save": "Save",
-
+	"Welcome to %s, %s": "Welcome to %s, %s",
+	"s": "s",
+	"%s follower%s": "%s follower%s",
+	"no": "no",
+	"%s view%s": "%s view%s",
+	"Welcome to %s": "Welcome to %s",
+	"Get started": "Get started",
 	"Login": "Login",
-	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
-	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
-	"Username": "Username",
-	"Password": "Password",
-	"Don't have an account?": "Don't have an account?",
-	"Register": "Register",
+	"Options successfully saved!": "Options successfully saved!",
+	"Randomly selected uploads": "Randomly selected uploads",
+	"by": "by",
+	"views": "views",
+	"No uploads.": "No uploads.",
 
 	"Options": "Options",
 	"User interface": "User interface",
@@ -47,102 +37,26 @@
 	"Circle": "Circle",
 	"Save Changes": "Save Changes",
 
-	"Email": "Email",
-	"Display Name": "Display Name",
-	"Password (Again)": "Password (Again)",
-
-	"Reset Password": "Reset Password",
-	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
-	"New Password": "New Password",
-	"Repeat New Password": "Repeat New Password",
-
-	"There are no uploads that match your query.": "There are no uploads that match your query.",
-
-	"Settings": "Settings",
-	"Credentials": "Credentials",
-	"Setting name": "Setting name",
-	"Setting": "Setting",
-	"Email address": "Email address",
-	"Current Password (For verification)": "Current Password (For verification)",
-	"Repeat new Password": "Repeat new Password",
-	"Profile": "Profile",
-	"Profile picture": "Profile picture",
-	"Profile background": "Profile background",
-	"Display name": "Display name",
-	"Description": "Description",
-	"Markdown is allowed.": "Markdown is allowed.",
-	"Username color": "Username color",
-	"Profile options are not available to banned users.": "Profile options are not available to banned users.",
-	"Miscellaneous": "Miscellaneous",
-
-	"Statistics": "Statistics",
-	"About %s": "About %s",
-	"Some statistics may not be accurate.": "Some statistics may not be accurate.",
-	"Registered users": "Registered users",
-	"Uploads": "Uploads",
-	"Views": "Views",
-	"Comments": "Comments",
-	"Graph": "Graph",
-
 	"Upload": "Upload",
 	"Upload info": "Upload info",
 	"Enter the title and description of your upload.": "Enter the title and description of your upload.",
+	" Title": " Title",
+	" Description": " Description",
 	" Tags": " Tags",
 	"File": "File",
 	"Select the file you want to upload. Major video and image file formats are supported.": "Select the file you want to upload. Major video and image file formats are supported.",
 	"Skip processing (MP4 ONLY, DEBUG)": "Skip processing (MP4 ONLY, DEBUG)",
 
-	"Edit my settings": "Edit my settings",
-	"View user page as viewer": "View user page as viewer",
-	"s": "s",
-	"%s follower%s": "%s follower%s",
-	"no": "no",
-	"%s view%s": "%s view%s",
-	"Edit profile": "Edit profile",
-	"Unfollow": "Unfollow",
-	"Follow": "Follow",
-	"Marked all notifications as read.": "Marked all notifications as read.",
-	"Settings successfully saved!": "Settings successfully saved!",
-	"About this user": "About this user",
-	"There are currently no uploads by %s.": "There are currently no uploads by %s.",
-	"Registered on": "Registered on",
-	"Last logged in": "Last logged in",
-	"Enter comment here.": "Enter comment here.",
-	"Comment": "Comment",
+	"Profile": "Profile",
+	"Settings": "Settings",
+	"Log out": "Log out",
 
-	"en-US": "en-US",
-	"Sorry %s, you are banned from %s.": "Sorry %s, you are banned from %s.",
-	"This ban is not set to expire.": "This ban is not set to expire.",
-	"Version": "Version",
-	"By the openSB contributors": "By the openSB contributors",
-	"What's new": "What's new",
-	"Running on Git commit: ": "Running on Git commit: ",
-	"User agent": "User agent",
-	"Browser being used": "Browser being used",
-	"Generic browser": "Generic browser",
-	"Debug": "Debug",
-	"It is risky to screenshot this due to security reasons, so please don't.": "It is risky to screenshot this due to security reasons, so please don't.",
-
-	"view%s": "view%s",
-
-	"Show replies": "Show replies",
-	"Reply": "Reply",
-
-	"This video should be processing.": "This video should be processing.",
-	"To view this video please enable JavaScript.": "To view this video please enable JavaScript.",
-
-	"by": "by",
-	"views": "views",
-
-	"More videos": "More videos",
-
-	"Edit": "Edit",
-
-	"Browse": "Browse",
-	"Studio": "Studio",
-	"Sign Out": "Sign Out",
-	"Create Account": "Create Account",
-	"Sign In": "Sign In",
+	"Register": "Register",
+	"Email": "Email",
+	"Display Name": "Display Name",
+	"Username": "Username",
+	"Password": "Password",
+	"Password (Again)": "Password (Again)",
 
 	"Latest videos": "Latest videos",
 	"(Page %s)": "(Page %s)",
@@ -159,12 +73,99 @@
 	"There are no videos of that category.": "There are no videos of that category.",
 	"You could create one!": "You could create one!",
 
-	"Welcome to %s, %s": "Welcome to %s, %s",
-	"Welcome to %s": "Welcome to %s",
-	"Get started": "Get started",
-	"Options successfully saved!": "Options successfully saved!",
-	"Randomly selected uploads": "Randomly selected uploads",
-	"No uploads.": "No uploads.",
+	"Password successfully reset! Please login with your new password.": "Password successfully reset! Please login with your new password.",
+	"You have been successfully logged out of all devices.": "You have been successfully logged out of all devices.",
+	"Don't have an account?": "Don't have an account?",
+
+	"en-US": "en-US",
+	"Follow": "Follow",
+	"Unfollow": "Unfollow",
+	"Sorry %s, you are banned from %s.": "Sorry %s, you are banned from %s.",
+	"This ban is not set to expire.": "This ban is not set to expire.",
+	"Version": "Version",
+	"By the openSB contributors": "By the openSB contributors",
+	"Statistics": "Statistics",
+	"What's new": "What's new",
+	"Running on Git commit: ": "Running on Git commit: ",
+	"User agent": "User agent",
+	"Browser being used": "Browser being used",
+	"Generic browser": "Generic browser",
+	"Debug": "Debug",
+	"It is risky to screenshot this due to security reasons, so please don't.": "It is risky to screenshot this due to security reasons, so please don't.",
+
+	"Admin panel": "Admin panel",
+	"Currently running Qobo version %s (commit %s) on %s.": "Currently running Qobo version %s (commit %s) on %s.",
+	"The latest": "The latest",
+	"Latest registered users": "Latest registered users",
+	"Latest seen users": "Latest seen users",
+	"Latest uploads": "Latest uploads",
+	"Numbers": "Numbers",
+	"All comments": "All comments",
+	"Delete": "Delete",
+
+	"Edit upload": "Edit upload",
+	"Enter the updated title and description of your upload.": "Enter the updated title and description of your upload.",
+	"Save": "Save",
+
+	"Reset Password": "Reset Password",
+	"Hello %s. Please choose a new secure password, and be sure to remember it!": "Hello %s. Please choose a new secure password, and be sure to remember it!",
+	"New Password": "New Password",
+	"Repeat New Password": "Repeat New Password",
+
+	"There are no uploads that match your query.": "There are no uploads that match your query.",
+
+	"Credentials": "Credentials",
+	"Setting name": "Setting name",
+	"Setting": "Setting",
+	"Email address": "Email address",
+	"Current Password (For verification)": "Current Password (For verification)",
+	"Repeat new Password": "Repeat new Password",
+	"Profile picture": "Profile picture",
+	"Profile background": "Profile background",
+	"Display name": "Display name",
+	"Description": "Description",
+	"Markdown is allowed.": "Markdown is allowed.",
+	"Username color": "Username color",
+	"Profile options are not available to banned users.": "Profile options are not available to banned users.",
+	"Miscellaneous": "Miscellaneous",
+
+	"About %s": "About %s",
+	"Some statistics may not be accurate.": "Some statistics may not be accurate.",
+	"Registered users": "Registered users",
+	"Uploads": "Uploads",
+	"Views": "Views",
+	"Comments": "Comments",
+	"Graph": "Graph",
+
+	"Edit my settings": "Edit my settings",
+	"View user page as viewer": "View user page as viewer",
+	"Edit profile": "Edit profile",
+	"Marked all notifications as read.": "Marked all notifications as read.",
+	"Settings successfully saved!": "Settings successfully saved!",
+	"About this user": "About this user",
+	"There are currently no uploads by %s.": "There are currently no uploads by %s.",
+	"Registered on": "Registered on",
+	"Last logged in": "Last logged in",
+	"Enter comment here.": "Enter comment here.",
+	"Comment": "Comment",
+
+	"view%s": "view%s",
+
+	"Show replies": "Show replies",
+	"Reply": "Reply",
+
+	"This video should be processing.": "This video should be processing.",
+	"To view this video please enable JavaScript.": "To view this video please enable JavaScript.",
+
+	"More videos": "More videos",
+
+	"Edit": "Edit",
+
+	"Browse": "Browse",
+	"Studio": "Studio",
+	"Sign Out": "Sign Out",
+	"Create Account": "Create Account",
+	"Sign In": "Sign In",
 
 	"%s followers": "%s followers",
 	"Published on %s": "Published on %s",
@@ -175,8 +176,6 @@
 	"Like": "Like",
 	"Dislike": "Dislike",
 	"Favorite": "Favorite",
-
-	"Log out": "Log out",
 
 	"Latest Videos": "Latest Videos",
 	"Qobo Videos": "Qobo Videos",
@@ -213,5 +212,5 @@
 	" The new passwords aren't identical.": " The new passwords aren't identical.",
 	"Your current password is incorrect.": "Your current password is incorrect.",
 
-	"Please wait 2 minutes before uploading again.": "Please wait 2 minutes before uploading again."
+	"Please wait a minute before uploading again.": "Please wait a minute before uploading again."
 }
